2015-04-01 S. Thiell <stephane.thiell@cea.fr>

	* Tree: allow local command execution on gateways by adding remote=False to
	task.shell()/run().  In practice with this patch, we can now easily
	execute local commands on (remote) gateways using node argument like
	`ipmitool -H %h` to spread the load between gateways.

2015-03-24 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: disallow opening bracket after digit (ticket #228).

2015-03-23 S. Thiell <stephane.thiell@cea.fr>

	* Clush.py: Warn user of possible use of shell globbing, especially when
	using brackets and bash without GLOBIGNORE set (ticket #225).
	* Clush.py: Fix --diff against null content (ticket #214).

2015-03-19 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Make max_retcode() return None on no-op. Until now, max_retcode()
	returned 0 by default, so even when no command was able to finish (for
	example, due to reached timeout). This behavior did not allow users to
	distinguish between successful commands and such no-op.

2015-03-11 S. Thiell <stephane.thiell@cea.fr>

	* Worker.py: Introduce StreamWorker as a generic worker class to manage a
	set of streams (using one EngineClient with multiple I/O streams
	internally). It's a concrete class that is now used in Gateway.py to
	manage I/O from the parent host in tree propagation mode. Also changed
	WorkerSimple (and thus WorkerPopen) to inherit from StreamWorker.

2014-05-20 S. Thiell <stephane.thiell@cea.fr>

	* EngineClient.py: Code improvement to support multiple customizable I/O
	streams per EngineClient in different mode, each being named and having
	their own read/write buffers and attributes.

2014-04-30 A. Degremont <aurelien.degremont@cea.fr>

	* Clush.py: Add a 'worker' option to switch default worker (ticket #221).

2014-04-23 S. Thiell <stephane.thiell@cea.fr>

	* EPoll.py: Close epoll control file descriptor when engine is released.

2014-01-26 A. Degremont <aurelien.degremont@cea.fr>
